<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:orientation="horizontal" >
        
        <EditText 
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/edit_ip"
            android:hint="@string/edit_ip"
            />
        
        <Button
            android:id="@+id/connectB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_connect"
            android:onClick="connect" 
            />
        
         <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/button_close"
            android:onClick="close" 
            />
        
	</LinearLayout>
    
    <TextView
        	android:textSize="20sp"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/controls"
        	/>
    
    <TextView
        	android:id="@+id/lblRoll"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/roll"
        	/>
    
    <TextView
        	android:id="@+id/lblPitch"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/pitch"
        	/>
    
    <TextView
        	android:id="@+id/lblThrottle"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/throttle"
        	/>
    
    <TextView
        	android:id="@+id/lblYaw"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/yaw"
        	/>
    
    
    <TextView
        	android:id="@+id/lblMode"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/mode"
        	
        	/>

</LinearLayout>
